Text Mining General Conference using Gibbs Sampling for LDA

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,5 +1,5 @@
+\clearpage
 %\section{acknowledgements}
+\textbf{Acknowledgements}:
 \label{acknowledgements}
-A big thank-you is in order for Dr. Liddle who provided an online means for Dr. Galbraith to build our gold standard. Additionally, I thank Dr. Lddle for being my advisor and for being personally vested in this work. 
-
-I thank my wife for being my best friend. She is always ready to provide a nudge to get me going again when times get tough (such as when your database gets corrupted or locks up).
+A big thank-you is in order for Dr. Ringger for having taught me what I was lacking for this project. I thank my wife for being my best friend. She has proven to be true help-meet for me, especially when times get tough, such as when your database gets corrupted or locks up or when you think you are a victim of an amazing virus and is willing to help you change all your passwords at a moment's notice.
