--- a/citations.tex
+++ b/citations.tex
@@ -3,11 +3,13 @@
 \bibliographystyle{plain}
 \bibliography{citations}
 
+%\cite{weka_2009}
+%\cite{lds.org}
+%\cite{hilton_2012}
+\nocite{*}
+
 %\cite{bean_2012}
-\cite{weka_2009}
-\cite{lds.org}
-\cite{hilton_2012}
-\cite{lund_binarization}
+%\cite{lund_binarization}
 %\cite{Wunsch-main}
 %\cite{Dictionary.com}
 %\cite{enlisch-hilfen}
