--- a/future-work.tex
+++ b/future-work.tex
@@ -2,17 +2,9 @@
 %\textbf{}
 This work can be used for future work in several ways. Following are some examples 
 	\begin {itemize}
-		\item test error rates of the same method, but using a different language
-		\item classify type of paraphrase (classification) perhaps by using machine learning
-		\item cluster type of paraphrase perhaps by using machine learning
-		\item detect new paraphrases (generation)
-%		\item remove duplicate citations
-		\item take into account extrinsic meta data such as date, orator, etc.
-		\item incorporate stemming in genetic alignments
-		\item incorporate TFIDF scores to scale scores during genetic alignment
-		\item [Insert more here]
+		\item Use some method to locate pairs of nearest neighbor documents, perhaps using a method similar to that used in \cite{Krstovski2013efficient}
+%		\item [Insert more here]
 	\end {itemize}
 The possibilities for future work is apparent. 
 
 Future work need not focus on only one of the above at a time.  Studies could perform two or more of the above if desired. 
-
