--- a/project.tex
+++ b/project.tex
@@ -15,15 +15,17 @@
 \def \JoDCitationsTotal {11000}
 
 \input {title}
-\input {abstract}
-%\input {sides}
+%\clearpage
+
+%\input {abstract}
 \input {introduction}
+%\input {sides}
 \input {prior-work}
 \input {methodology}
 %\input {test-items}
-\input {results}
-\input {conclusion}
-\input {future-work}
+%\input {results}
+%\input {conclusion}
+%\input {future-work}
 \input {acknowledgements}
 \input {citations}
 %\input {appendix}
