--- a/title.tex
+++ b/title.tex
@@ -1,14 +1,12 @@
-\title{Aligning to Prophets' Words:\\
-Using Regressive Backpropagation-trained Multi-Layer Perceptron to Produce More Accurate Textual Alignments Across Multiple Imitation Classes}
+\title{Theological topics through time:\\
+An application of Gibbs sampling and other metrics to analyze topic venues in religious discourses}
 
 %\today{September 30, 2013}
-\author{Michael Bean\\
-M.A. Linguistics student at Brigham Young University\\
+\author{Michael Bean, M.A. Linguistics student\\
+Dr. Eric Ringger, Computer Science
 \\
-Dr. Stephen Liddle\\
-Academic Director, Center for Entrepreneurship and Technology\\
 \\
-\today
+Brigham Young University
 }
 \maketitle
 %Description here
