--- a/helpers.tex
+++ b/helpers.tex
@@ -24,3 +24,23 @@
 %a & b & c\\
 %\end {tabular}\\
 
+
+@Book{xyz,
+  title = {xyz},
+  author = {xyz},
+  year = {1900},
+  publisher = {bull},
+}
+
+@ONLINE{lds.org,
+  AUTHOR  = {LDS.org},
+  TITLE   = {Journal of Discourses},
+  Month = oct,
+  Year = {2013},
+  NOTE = "[Online; Accessed on 2013-10-24]",
+  URL = {http://www.lds.org/topics/journal-of-discourses}
+}
+
+%\vspace{5mm}
+%\indent{\textit{Words are synonymous iff they share at least 3 hyopnyms and/or hypernyms.}}
+%\vspace{5mm}
