--- a/introduction.tex
+++ b/introduction.tex
@@ -1,22 +1,16 @@
 \section {Introduction (and Inspiration/Motivation)}
 
-The work of author attribution is applicable and researchable in both secular and non-secular fields. This is true regardless of whether the imitation is an exact quote, non-exact quote, paraphrase, or allusion. Collectively, we refer to these as \textit{imitations}. First we compare various genetic alignment algorithms and their performance. Then we use their output as well as other metadata of the imitations to train multiple neural networks using regressive back-propogation. 
+Much research has been performed concerning topic modeling. A subset of this research aims to analyze topical trends over time. Such work includes that of \cite{hall-jurafsky-manning:2008:EMNLP} where entropy, applied on chronological disjoint sets of texts, is used as a metric of showing broadening/narrowing of topics over time. Hall et al. also demonstrated that the Jensen Shannon divergence between venue\footnote{or disjoint sets of documents} pairings could be used to measure their level of similarity. This work aims to perform a similar task, but on venues that are determined by meta-data other than just conference name. Meta-data used for groupings include gender of speaker and season of year (April/October). Since our dataset is different in nature than those used by Hall et al., it is hoped that their methodology will prove to be robust enough to allow the data to speak for itself, shedding light on the topics contained in religious discourses.
 
-In this work, we do not detect imitations; we only aim to align them. 
-
-Our primary, or imitable documents, include \textit{The Holy Bible KJV}, \textit{The Holy Bible JST} (Joseph Smith Translation), \textit{The Book of Mormon}, \textit{The Doctrine \& Covenants}, and \textit{The Pearl of Great Price} as sources. Secondary documents---those that attempt to imitate the primary documents---are composed of religious discourse texts: 10 volumes of the Journals of Discourse. ``The Journal of Discourses is not an official publication of The Church of Jesus Christ of Latter-day Saints. It is a compilation of sermons and other materials from the early years of the Church, which were transcribed and then published. It included some doctrinal instruction but also practical teaching, some of which is speculative in nature and some of which is only of historical interest.'' (http://www.lds.org/topics/journal-of-discourses) The discourses were last published in 1886. Using a database of pre-aligned imitation alignments, imitation class, and scripture imitation passages, we compare various genetic algorithms in terms of error rate. %and perhaps other metrics 
-[For error measures: We focus on only the right position of the alignments since we aim to insert imitations where it seems most appropriate for them.] We then determine which of all the genetic algorithms have the least error for each type of imitation.
-
-After determining which version of genetic algorithm works best for each type of imitation, we use the meta-data of the alignments (length, number of matches, number of indels, and number of replaces, etc.) and target (gold standard alignment positions) as input to the training of a neural network. %We found that there were xyz clusters, each corresponding to exact quote, non-exact, paraphrase, or allusion. This empirically demonstrates that given just xyz algorithms, we can discern between types of attribution that is called for. It is not outside the realm of possibilities for future work to use this technique to classify work at run-time before making a conclusion as to the badness of the imitation attempt.
-According to overall error rates, neural networks---both linear and non-linear---outperformed all genetic alignment algorithms. %This was also true with respect to each imitation type.
-
-This study aims to prove the following hypothesis:
+This study aims to prove the following hypotheses:
 	\begin{quote}
-		$H_{1}:$ The error of any of our genetic algorithms is better than the random mean absolute error of 232.%xyz replace with correct number (232 is RMSE)
-
-		$H_{2}:$ Given output and meta-data of genetic alignments, a neural network can be trained to reduce error rates on imitation alignments than any of them alone.
+		$H_{1}:$ The distribution of probability mass of topics fluctuates over time. 
 		
-		%$H_{3}:$ Given the meta-data of the text, we can classify the type of imitation with xyz\% accuracy.	
+		$H_{2}:$ Time of year will have an effect on the entropy of each venue.
+
+		$H_{3}:$ Gender will have an effect on the entropy of each venue.
+
+		$H_{4}:$ The Jensen-Shannon divergence between gender will be larger than the divergences found by Hall et al..
 	\end{quote}
 
-%Herein we also show the classification confusion matrix for type of imitation, which is not revelatory, but informative nonetheless.  [Future work: also show the meta-data profile, including a word-length histogram, word-token-length histogram, etc.].  
+We prove these hypotheses applying metrics on each venu alone and within pairs of venues. Resulting values are graphed over time for easy interpretation.
